--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_it: ^7.2.0
   just_audio: ^0.9.29
   audio_service: ^0.18.7
+  audio_session: ^0.1.10
   sqflite_sqlcipher: ^2.1.1+1
 
 dev_dependencies:
